Bug 366340 List items should not have SHOWING state when they are scrolled offpatch by Nian.Liu r=surkov.alexander